--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.Nav-wraper{
+  /* display: flex;
+  width: 100%;
+  max-width: 100%; */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: sticky;
+  position: fixed;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+   z-index: 10;
 }
+.Nav-wraper .nav-instegram-container{
+  display: flex;
+  justify-content: center;
+  /* background-color: blue; */
+  /* width: 100%; */
+  padding: 0 9em;
+  background-color: white;
+  border-bottom: 1px solid grey;
 
-.App-link {
-  color: #61dafb;
+
 }
+.Nav-wraper .log-out-container{
+/* background-color: red; */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+position: absolute;
+top: 5px;
+right: 15px;
+}
+.Nav-wraper .log-out-container button{
+background-color: transparent;
+border: none;
+font-size: 20px;
 }
